--- a/index.html
+++ b/index.html
@@ -587,12 +587,12 @@ body.dark span:not(.material-icons) {
     <div class="relative w-full max-w-lg bg-white dark:bg-slate-900 rounded-t-[40px] sm:rounded-[40px] p-8 shadow-2xl animate-in slide-in-from-bottom sm:zoom-in duration-300 border-t dark:border-slate-800">
         <div class="w-12 h-1.5 bg-slate-200 dark:bg-slate-700 rounded-full mx-auto mb-8 sm:hidden"></div>
       
-        <h3 class="text-xl font-black text-slate-800 dark:text-slate-100 mb-1">Ekspor Laporan</h3>
-        <p class="text-[10px] font-bold text-slate-400 dark:text-slate-500 uppercase tracking-widest mb-8">Format: Excel & PDF Berwarna</p>
+        <h3 class="text-xl font-black text-slate-800 dark:text-slate-100 mb-1">Ekspor Data Warga</h3>
+        <p class="text-[10px] font-bold text-slate-400 dark:text-slate-500 uppercase tracking-widest mb-8">Format: Excel & PDF</p>
 
         <div class="space-y-5">
             <div class="space-y-2">
-                <label class="text-[10px] font-black text-slate-400 dark:text-slate-500 uppercase ml-2 tracking-widest">Wilayah Kerja</label>
+                <label class="text-[10px] font-black text-slate-400 dark:text-slate-500 uppercase ml-2 tracking-widest">Wilayah</label>
                 <select id="export-rt" class="w-full bg-slate-50 dark:bg-slate-800 text-slate-800 dark:text-slate-100 border-2 border-transparent focus:border-indigo-500 rounded-2xl text-xs font-bold p-4 outline-none transition-all">
                     <option value="ALL" class="bg-white dark:bg-slate-900">Semua RT (RW 06)</option>
                     <option value="1" class="bg-white dark:bg-slate-900">RT 1</option>
