--- a/index.html
+++ b/index.html
@@ -2631,25 +2631,39 @@ function updateAgeStatistics(data) {
     const today = new Date();
 
     // 2. Hitung Distribusi Usia
-    dataWarga.forEach(w => {
-        // Coba ambil tanggal lahir (antisipasi perbedaan penamaan field)
-        let tgl = w.tanggal_lahir || w.TanggalLahir || w.tgl_lahir;
-        if (!tgl) return;
+wargaArray.forEach(w => {
+        // DETEKSI OTOMATIS: Kita ambil nilai apapun yang mengandung unsur 'lahir'
+        let tglRaw = w.TanggalLahir || w.tanggal_lahir || w.TglLahir || w['Tanggal Lahir'];
+        if (!tglRaw) return;
 
-        // Pastikan format ISO (YYYY-MM-DD)
-        if (tgl.includes('-') && tgl.split('-')[0].length === 2) {
-            const p = tgl.split('-');
-            tgl = `${p[2]}-${p[1]}-${p[0]}`;
+        let tgl = String(tglRaw).trim();
+        
+        // 1. Tangani format DD/MM/YYYY menjadi DD-MM-YYYY
+        tgl = tgl.replace(/\//g, '-');
+
+        // 2. Tangani format DD-MM-YYYY menjadi YYYY-MM-DD (Standar KTP/OCR)
+        if (tgl.includes('-')) {
+            const parts = tgl.split('-');
+            if (parts[0].length === 2 && parts[2].length === 4) {
+                // Jika formatnya 18-02-1986, kita balik jadi 1986-02-18
+                tgl = `${parts[2]}-${parts[1]}-${parts[0]}`;
+            }
         }
 
         const birthDate = new Date(tgl);
-        if (isNaN(birthDate.getTime())) return;
+        
+        // Jika masih gagal (Invalid Date), coba paksa parse
+        if (isNaN(birthDate.getTime())) {
+            console.warn("Gagal memproses tanggal untuk:", w.Nama, "Nilai:", tglRaw);
+            return;
+        }
 
+        // HITUNG USIA
         let age = today.getFullYear() - birthDate.getFullYear();
         const m = today.getMonth() - birthDate.getMonth();
         if (m < 0 || (m === 0 && today.getDate() < birthDate.getDate())) age--;
 
-        // Klasifikasi Kemenkes
+        // KLASIFIKASI KEMENKES
         if (age < 5) counts.balita++;
         else if (age <= 11) counts.anak++;
         else if (age <= 18) counts.remaja++;
