--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@ body.dark span:not(.material-icons) {
     
     <div class="flex gap-2 overflow-x-auto pb-2 no-scrollbar">
         <button onclick="changeStatPage('balita')" id="tab-balita" class="tab-btn active flex items-center gap-1 whitespace-nowrap">
-            Balita <span id="badge-balita" class="bg-indigo-100 text-indigo-600 px-1.5 py-0.5 rounded-lg text-[8px]">0</span>
+            Balita <span id="badge-balita" class="bg-indigo-600 text-white dark:bg-indigo-500 dark:text-white px-1.5 py-0.5 rounded-lg text-[8px] font-bold">0</span>
         </button>
         <button onclick="changeStatPage('anak')" id="tab-anak" class="tab-btn flex items-center gap-1 whitespace-nowrap">
             Anak <span id="badge-anak" class="bg-indigo-100 text-indigo-600 px-1.5 py-0.5 rounded-lg text-[8px]">0</span>
