--- a/index.html
+++ b/index.html
@@ -606,19 +606,19 @@ body.dark span:not(.material-icons) {
             Balita <span id="badge-balita" class="bg-indigo-600 text-white dark:bg-indigo-500 dark:text-white px-1.5 py-0.5 rounded-lg text-[8px] font-bold">0</span>
         </button>
         <button onclick="changeStatPage('anak')" id="tab-anak" class="tab-btn flex items-center gap-1 whitespace-nowrap">
-            Anak <span id="badge-anak" class="bg-indigo-100 text-indigo-600 px-1.5 py-0.5 rounded-lg text-[8px]">0</span>
+            Anak <span id="badge-anak" class="bg-indigo-600 text-white dark:bg-indigo-500 dark:text-white px-1.5 py-0.5 rounded-lg text-[8px] font-bold">0</span>
         </button>
         <button onclick="changeStatPage('remaja')" id="tab-remaja" class="tab-btn flex items-center gap-1 whitespace-nowrap">
-            Remaja <span id="badge-remaja" class="bg-indigo-100 text-indigo-600 px-1.5 py-0.5 rounded-lg text-[8px]">0</span>
+            Remaja <span id="badge-remaja" class="bg-indigo-100 text-indigo-600 dark:bg-slate-700 dark:text-indigo-300 px-1.5 py-0.5 rounded-lg text-[8px] transition-colors">0</span>
         </button>
         <button onclick="changeStatPage('dewasa')" id="tab-dewasa" class="tab-btn flex items-center gap-1 whitespace-nowrap">
-            Dewasa <span id="badge-dewasa" class="bg-indigo-100 text-indigo-600 px-1.5 py-0.5 rounded-lg text-[8px]">0</span>
+            Dewasa <span id="badge-dewasa" class="bg-indigo-100 text-indigo-600 dark:bg-slate-700 dark:text-indigo-300 px-1.5 py-0.5 rounded-lg text-[8px] transition-colors">0</span>
         </button>
         <button onclick="changeStatPage('lansia')" id="tab-lansia" class="tab-btn flex items-center gap-1 whitespace-nowrap">
-            Lansia <span id="badge-lansia" class="bg-indigo-100 text-indigo-600 px-1.5 py-0.5 rounded-lg text-[8px]">0</span>
+            Lansia <span id="badge-lansia" class="bg-indigo-100 text-indigo-600 dark:bg-slate-700 dark:text-indigo-300 px-1.5 py-0.5 rounded-lg text-[8px] transition-colors">0</span>
         </button>
         <button onclick="changeStatPage('ultah')" id="tab-ultah" class="tab-btn flex items-center gap-1 whitespace-nowrap">
-            Ultah <span id="badge-ultah" class="bg-indigo-100 text-indigo-600 px-1.5 py-0.5 rounded-lg text-[8px]">0</span>
+            Ultah <span id="badge-ultah" class="bg-indigo-600 text-white dark:bg-indigo-500 dark:text-white px-1.5 py-0.5 rounded-lg text-[8px] font-bold">0</span>
         </button>
     </div>
 
