--- a/index.html
+++ b/index.html
@@ -618,7 +618,7 @@ body.dark span:not(.material-icons) {
             Lansia <span id="badge-lansia" class="bg-indigo-600 text-white dark:bg-indigo-500 dark:text-white px-1.5 py-0.5 rounded-lg text-[8px] font-bold">0</span>
         </button>
         <button onclick="changeStatPage('ultah')" id="tab-ultah" class="tab-btn flex items-center gap-1 whitespace-nowrap">
-            Ultah <span id="badge-hbd" class="bg-indigo-600 text-white dark:bg-indigo-500 dark:text-white px-1.5 py-0.5 rounded-lg text-[8px] font-bold">0</span>
+            Ultah <span id="badge-ultah" class="bg-indigo-600 text-white dark:bg-indigo-500 dark:text-white px-1.5 py-0.5 rounded-lg text-[8px] font-bold">0</span>
         </button>
     </div>
 
@@ -924,7 +924,7 @@ body.dark span:not(.material-icons) {
       <button onclick="navigate('stats')" id="nav-stats" class="nav-item relative">
     <span class="material-symbols-rounded">demography</span>
     <span>Statistik</span>
-    <span id="badge-ultah" class="hidden absolute -top-1 right-2 bg-pink-500 text-white text-[10px] font-bold px-1.5 py-0.5 rounded-full border-2 border-white">
+    <span id="badge-hbd" class="hidden absolute -top-1 right-2 bg-pink-500 text-white text-[10px] font-bold px-1.5 py-0.5 rounded-full border-2 border-white">
         0
     </span>
 </button>
@@ -2010,7 +2010,7 @@ window.addEventListener('DOMContentLoaded', checkLoginState);
         return b.getMonth() === tMonth && b.getDate() === tDate;
     }).length;
 
-    const badge = document.getElementById('badge-ultah');
+    const badge = document.getElementById('badge-hbd');
     if (countToday > 0) {
         badge.innerText = countToday;
         badge.classList.remove('hidden');
