--- a/index.html
+++ b/index.html
@@ -382,6 +382,10 @@ body.dark span:not(.material-icons) {
     }
     
     .tab-btn.active { 
+       background: var(--soft-indigo); 
+      color: white; 
+      border-color: var(--soft-indigo); 
+      box-shadow: 0 8px 15px rgba(99,102,241,0.2); 
      @apply scale-105 shadow-sm;
     }
 
