--- a/index.html
+++ b/index.html
@@ -439,6 +439,9 @@ body.dark span:not(.material-icons) {
     body.dark #modal-ultah button[style*="background-color: #f5adbe"] {
     box-shadow: 0 4px 15px rgba(245, 173, 190, 0.3);
 }
+    .no-scrollbar::-webkit-scrollbar { display: none; }
+    .no-scrollbar { -ms-overflow-style: none; scrollbar-width: none; }
+    
   </style>
 </head>
 <body>
