--- a/index.html
+++ b/index.html
@@ -1223,6 +1223,15 @@ function switchStatTab(tab) {
 
     filteredStatData = tempFiltered;
     renderStatList();
+  // Memastikan tombol yang aktif bergeser ke tengah kontainer
+const activeTab = document.getElementById('tab-' + tab);
+if (activeTab) {
+    activeTab.scrollIntoView({
+        behavior: 'smooth',
+        inline: 'center',
+        block: 'nearest'
+    });
+}
 }
 
 function renderStatList() {
