--- a/index.html
+++ b/index.html
@@ -499,9 +499,48 @@ body.dark span:not(.material-icons) {
             <button onclick="refreshData()" class="text-slate-300 hover:text-indigo-500 transition-colors">
                 <span class="material-icons" id="refresh-icon">refresh</span>
             </button>
-            <button onclick="logout()" class="text-slate-300 hover:text-red-500 transition-colors">
-                <span class="material-icons">logout</span>
+<!-- update profil -->
+          <button onclick="openProfileModal()" class="text-slate-400 hover:text-indigo-600 transition-colors">
+    <span class="material-icons">account_circle</span>
+</button>
+
+<div id="profile-modal" class="fixed inset-0 z-[100] hidden items-center justify-center bg-black/50 backdrop-blur-sm p-4">
+    <div class="bg-white dark:bg-slate-900 w-full max-w-sm rounded-[32px] overflow-hidden shadow-2xl animate__animated animate__zoomIn animate__faster">
+        <div class="bg-indigo-600 p-8 text-center relative">
+            <button onclick="closeProfileModal()" class="absolute right-4 top-4 text-white/50 hover:text-white">
+                <span class="material-icons">close</span>
             </button>
+            <div class="w-20 h-20 bg-white/20 rounded-full mx-auto flex items-center justify-center border-4 border-white/30 mb-3">
+                <span class="material-icons text-white text-4xl">person</span>
+            </div>
+            <h3 id="prof-display-name" class="text-white font-black text-lg">Nama Pengguna</h3>
+            <p id="prof-display-role" class="text-indigo-100 text-[10px] uppercase tracking-widest font-bold">Role</p>
+        </div>
+
+        <div class="p-6 space-y-4">
+            <div class="space-y-1">
+                <label class="text-[10px] font-bold text-slate-400 uppercase ml-1">Nama Lengkap</label>
+                <input type="text" id="prof-nama" class="w-full px-4 py-3 rounded-2xl bg-slate-100 dark:bg-slate-800 border-none text-sm font-bold focus:ring-2 focus:ring-indigo-500">
+            </div>
+            <div class="space-y-1">
+                <label class="text-[10px] font-bold text-slate-400 uppercase ml-1">Username</label>
+                <input type="text" id="prof-username" readonly class="w-full px-4 py-3 rounded-2xl bg-slate-50 dark:bg-slate-800/50 border-none text-sm font-bold text-slate-400 cursor-not-allowed">
+            </div>
+            <div class="space-y-1">
+                <label class="text-[10px] font-bold text-slate-400 uppercase ml-1">Ganti Password (Isi jika ingin ubah)</label>
+                <input type="password" id="prof-password" placeholder="••••••••" class="w-full px-4 py-3 rounded-2xl bg-slate-100 dark:bg-slate-800 border-none text-sm font-bold focus:ring-2 focus:ring-indigo-500">
+            </div>
+
+            <button onclick="updateProfile()" id="btn-save-profile" class="w-full bg-indigo-600 text-white py-4 rounded-2xl font-black text-sm shadow-lg shadow-indigo-200 dark:shadow-none active:scale-95 transition-all flex items-center justify-center gap-2">
+                <span class="material-icons text-sm">save</span> SIMPAN PERUBAHAN
+            </button>
+
+            <button onclick="logout()" class="w-full py-3 text-red-500 font-bold text-xs flex items-center justify-center gap-1 hover:bg-red-50 dark:hover:bg-red-900/20 rounded-xl transition-all">
+                <span class="material-icons text-sm">logout</span> KELUAR DARI APLIKASI
+            </button>
+        </div>
+    </div>
+</div>
         </div>
     </header>
 
@@ -2778,6 +2817,60 @@ function updateAgeStatistics(data) {
     });
 }
 
+// update profil
+    async function updateProfile() {
+    const btn = document.getElementById('btn-save-profile');
+    const nama = document.getElementById('prof-nama').value;
+    const username = document.getElementById('prof-username').value;
+    const password = document.getElementById('prof-password').value;
+
+    if (!nama) return Swal.fire("Error", "Nama tidak boleh kosong", "error");
+
+    btn.disabled = true;
+    btn.innerHTML = `<span class="animate-spin material-icons text-sm">sync</span> MENYIMPAN...`;
+
+    try {
+        const response = await fetch(API_URL, {
+            method: 'POST',
+            body: JSON.stringify({
+                action: 'updateUser',
+                args: {
+                    username: username,
+                    nama: nama,
+                    password: password
+                }
+            })
+        });
+
+        const result = await response.json();
+
+        if (result.success) {
+            // Update Local Storage agar nama di header langsung berubah
+            const rawUser = JSON.parse(localStorage.getItem('ewarga_user'));
+            rawUser.nama = nama;
+            localStorage.setItem('ewarga_user', JSON.stringify(rawUser));
+
+            Swal.fire({
+                icon: 'success',
+                title: 'Berhasil',
+                text: 'Profil diperbarui!',
+                timer: 1500,
+                showConfirmButton: false
+            }).then(() => {
+                location.reload(); // Refresh untuk update semua komponen UI
+            });
+        } else {
+            throw new Error(result.error);
+        }
+
+    } catch (error) {
+        console.error(error);
+        Swal.fire("Gagal", "Terjadi kesalahan: " + error.message, "error");
+    } finally {
+        btn.disabled = false;
+        btn.innerHTML = `<span class="material-icons text-sm">save</span> SIMPAN PERUBAHAN`;
+    }
+}
     
   </script>
 
