--- a/index.html
+++ b/index.html
@@ -2007,7 +2007,12 @@ window.addEventListener('DOMContentLoaded', checkLoginState);
 
         if (result.success) {
             // Simpan data user lengkap (username, role, rt) ke localStorage
-            localStorage.setItem('ewarga_user', JSON.stringify(result));
+            localStorage.setItem('ewarga_user', JSON.stringify({
+    username: user,
+    nama: namaUserDariSheet,
+    role: role,
+    rt: rt
+}));
             updateUserInfoDisplay();
             // Sembunyikan login, tampilkan aplikasi
             document.getElementById('auth-container').style.display = 'none';
@@ -2927,18 +2932,26 @@ function updateAgeStatistics(data) {
 }
 
     // profil user
-    function openProfileModal() {
-    const user = JSON.parse(localStorage.getItem('ewarga_user'));
-    if (!user) return;
+function openProfileModal() {
+    let userData = localStorage.getItem("ewarga_user");
+    
+    try {
+        userData = JSON.parse(userData);
+    } catch(e) {
+        console.error("Data user bukan JSON valid:", userData);
+        alert("Terjadi kesalahan pada data profil. Silakan login ulang.");
+        logout();
+        return;
+    }
 
-    document.getElementById("profile-nama").value = user.nama;
-    document.getElementById("profile-username").value = user.username;
-    document.getElementById("profile-role").value = user.role;
-    document.getElementById("profile-rt").value = user.rt;
-    document.getElementById("profile-password").value = "";
-
-    document.getElementById("modal-profile").classList.remove("hidden");
+    // kalau sudah aman baru digunakan
+    document.getElementById("p-username").value = userData.username;
+    document.getElementById("p-nama").value = userData.nama;
+    document.getElementById("p-password").value = "";
+    
+    document.getElementById("profile-modal").classList.remove("hidden");
 }
+
 
     function closeProfileModal() {
     document.getElementById("modal-profile").classList.add("hidden");
