--- a/index.html
+++ b/index.html
@@ -1113,17 +1113,31 @@ async function handleLogin(e) {
     e.preventDefault();
     toggleLoading(true);
 
-    const u = document.getElementById('login-user').value;
-    const p = document.getElementById('login-pass').value;
+    const username = document.getElementById('login-user').value;
+    const password = document.getElementById('login-pass').value;
 
     try {
-        const res = await fetch(`${API_URL}?action=checkLogin&args=${JSON.stringify([u, p])}`);
+        const res = await fetch(
+            `${API_URL}?action=checkLogin&args=${JSON.stringify([username, password])}`
+        );
         const result = await res.json();
 
         if (result.success) {
 
-            // SIMPAN DATA USER SEBAGAI JSON
-            localStorage.setItem("ewarga_user", JSON.stringify(result.user));
+            // ==============================================
+            //  SIMPAN DATA USER DALAM BENTUK JSON VALID
+            // ==============================================
+            localStorage.setItem(
+                "ewarga_user",
+                JSON.stringify({
+                    username: username,
+                    role: result.role,
+                    rt: result.rt,
+                    nama: result.nama || ""   // jika tersedia
+                })
+            );
+
+            console.log("Login Saved:", localStorage.getItem("ewarga_user"));
 
             updateUserInfoDisplay();
 
@@ -1131,17 +1145,20 @@ async function handleLogin(e) {
             document.getElementById('main-app').style.display = 'flex';
 
             refreshData();
+
         } else {
-            alert("Login Gagal");
+            alert("Login Gagal, periksa username / password.");
         }
 
     } catch (err) {
-        alert("Terjadi kesalahan");
+        alert("Terjadi kesalahan server.");
         console.error(err);
+
     } finally {
         toggleLoading(false);
     }
 }
+
 
 
 function logout() {
@@ -2924,7 +2941,15 @@ function updateAgeStatistics(data) {
             // Update Local Storage agar nama di header langsung berubah
             const rawUser = JSON.parse(localStorage.getItem('ewarga_user'));
             rawUser.nama = nama;
-            localStorage.setItem('ewarga_user', JSON.stringify(rawUser));
+localStorage.setItem(
+    "ewarga_user",
+    JSON.stringify({
+        username: user,
+        role: result.role,
+        rt: result.rt,
+        nama: result.nama || ""
+    })
+);
 
             Swal.fire({
                 icon: 'success',
